--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.301.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
