--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "onedollarstats": "^0.0.11",
     "posthog-js": "^1.301.2",
+    "posthog-node": "^5.17.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
